--- a/1_day/2_day/mainwindow.ui
+++ b/1_day/2_day/mainwindow.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>663</width>
-    <height>339</height>
+    <width>400</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Triangle solver</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QLabel" name="label">
@@ -19,157 +19,142 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>191</width>
+      <width>101</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string> Quadratic equation solver:</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="line_a">
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>30</y>
-      <width>91</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>a</string>
+     <string>Triangle solver:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>30</y>
-      <width>51</width>
+      <x>20</x>
+      <y>40</y>
+      <width>16</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>*x^2 +</string>
+     <string>a: </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>16</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>b:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>100</y>
+      <width>41</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>alpha:</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="CheckisRad">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>100</y>
+      <width>71</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Radian</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="line_alpha">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>100</y>
+      <width>91</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>degrees</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="line_b">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>30</y>
-      <width>81</width>
-      <height>20</height>
+      <x>40</x>
+      <y>70</y>
+      <width>113</width>
+      <height>25</height>
      </rect>
     </property>
     <property name="text">
      <string>b</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLineEdit" name="line_a">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>30</y>
-      <width>31</width>
-      <height>17</height>
+      <x>40</x>
+      <y>40</y>
+      <width>113</width>
+      <height>25</height>
      </rect>
     </property>
     <property name="text">
-     <string>*x +</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="line_c">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>30</y>
-      <width>81</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="inputMask">
-     <string/>
-    </property>
-    <property name="text">
-     <string>c</string>
+     <string>a</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>30</y>
-      <width>31</width>
-      <height>21</height>
+      <x>20</x>
+      <y>130</y>
+      <width>89</width>
+      <height>25</height>
      </rect>
     </property>
     <property name="text">
-     <string>=</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="line_x1">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>10</y>
-      <width>221</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="line_x2">
-    <property name="geometry">
-     <rect>
-      <x>420</x>
-      <y>60</y>
-      <width>221</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>390</x>
-      <y>10</y>
-      <width>21</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>x1</string>
+     <string>Calculate c</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>60</y>
+      <x>20</x>
+      <y>170</y>
       <width>21</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>x2</string>
+     <string>c =</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="line_c">
+    <property name="geometry">
+     <rect>
+      <x>42</x>
+      <y>170</y>
+      <width>131</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -178,7 +163,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>663</width>
+     <width>400</width>
      <height>22</height>
     </rect>
    </property>
