--- a/6_day/TextEdit/mainwindow.ui
+++ b/6_day/TextEdit/mainwindow.ui
@@ -121,6 +121,19 @@
      <string>Dark theme</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="printButton">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>170</y>
+      <width>41</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Print</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
